BugFix: alignment of project option buttons in large display mode, increase transform x of cards to -25%

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -154,7 +154,7 @@ a {
 .authentication-cards {
     margin-top: auto;
     margin-bottom: auto;
-    transform: translateY(-15%);
+    transform: translateY(-25%);
 }
 
 /* .btn-task-edit:hover {
